[gd_scene load_steps=13 format=2]

[ext_resource path="res://Action RPG Resources/System/first_countDown.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/System/countDownNum-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Action RPG Resources/System/ScoreIndex.gd" type="Script" id=3]
[ext_resource path="res://Action RPG Resources/System/string_start.png" type="Texture" id=4]
[ext_resource path="res://Action RPG Resources/Effects/temp.png" type="Texture" id=5]
[ext_resource path="res://Action RPG Resources/SE/startSE.wav" type="AudioStream" id=6]
[ext_resource path="res://Action RPG Resources/SE/countDownSE.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "countDown",
"speed": 5.0
} ]

[node name="first_countDown" type="Label"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="one" type="AnimatedSprite" parent="."]
position = Vector2( 64, 64 )
scale = Vector2( 0.5, 0.5 )
z_index = 10
frames = SubResource( 5 )
animation = "countDown"
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="can_move_timer" type="Timer" parent="."]
one_shot = true

[node name="start" type="Sprite" parent="."]
position = Vector2( 64, 64 )
z_index = 10
texture = ExtResource( 4 )

[node name="lowLight" type="Sprite" parent="."]
unique_name_in_owner = true
modulate = Color( 0.352941, 0.352941, 0.352941, 0.658824 )
position = Vector2( 1, 0 )
texture = ExtResource( 5 )

[node name="countSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="startSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="can_move_timer" to="." method="_on_can_move_timer_timeout"]
